# supereight

./: .clang-format  .gitignore  .vimrc  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO.md  references.bib  supereightConfig.cmake.in
backend/: CMakeLists.txt
backend/include/supereight/backend/: backend.hpp  backend_base.hpp  backend_cuda.hpp  backend_openmp.hpp  backends.hpp  buffer_cpu.hpp  buffer_cuda.hpp  cuda_util.hpp  fields.hpp  memory_pool_cpu.hpp  memory_pool_cuda.hpp
backend/src/common/: field_impls.hpp
backend/src/cuda/: CMakeLists.txt  allocate.cu  allocate.hpp  backend_cuda.cpp  kernels.cu  kernels.hpp  projective_functor.hpp  projective_update.cu  projective_update.hpp  raycast.cu  raycast.hpp
backend/src/openmp/: CMakeLists.txt  backend_openmp.cpp  kernels.hpp  projective_functor.hpp  rendering.hpp
core/test/io/: CMakeLists.txt  io_unittest.cpp
denseslam/: CMakeLists.txt
denseslam/include/se/: DenseSLAMSystem.h  vtk-io.h
denseslam/src/: DenseSLAMSystem.cpp  preprocessing.cpp  rendering.cpp  tracking.cpp
denseslam/src/bfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
denseslam/src/kfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
se_apps/: CMakeLists.txt  moc_qcustomplot.cpp
se_apps/cmake/: FindOpenNI2.cmake  FindPAPI.cmake
se_apps/include/: PowerMonitor.h  default_parameters.h  draw.h  interface.h
se_apps/qt/: ApplicationWindow.cpp  ApplicationWindow.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  QtGUI.cpp  images.qrc.depends
se_apps/qt/licenses/: products.txt
se_apps/scripts/: README.md  _dataset.py  _run.py  _util.py  datasets.py  run_kf.py  systemsettings.py
se_apps/src/: PowerMonitor.cpp  benchmark.cpp  exploration_progress_evaluation.cpp  mainQt.cpp  mapcropper.cpp  reader.cpp  voxelcounter.cpp
se_apps/test/: CMakeLists.txt  Makefile
se_apps/test/voxelcounter/: CMakeLists.txt  voxelcounter_unittest.cpp
se_core/: CMakeLists.txt
se_core/include/se/: node.hpp  node_iterator.hpp  octant_ops.hpp  octree.hpp  octree_defines.h  ray_iterator.hpp  voxel_traits.hpp
se_core/test/: CMakeLists.txt  Makefile
se_core/test/algorithms/: unique_unittest.cpp
se_core/test/allocation/: alloc_unittest.cpp
se_core/test/functor/: CMakeLists.txt  axisaligned_unittest.cpp
se_core/test/geometry/: CMakeLists.txt  aabb_collision_unittest.cpp  octree_collision_unittest.cpp
se_core/test/image/: image_unittest.cpp
se_core/test/interp/: CMakeLists.txt  gather_unittest.cpp  interpolation_unittest.cpp
se_core/test/io/: io_unittest.cpp
se_core/test/multiscale/: CMakeLists.txt  multiscale_unittest.cpp
se_core/test/neighbors/: CMakeLists.txt  neighbor_gather_unittest.cpp  voxel_abstraction_unittest.cpp
se_core/test/octree/: CMakeLists.txt  octant_ops_unittest.cpp  octree_unittest.cpp  ray_iterator_unittest.cpp
se_core/test/utils/: CMakeLists.txt  math_unittest.cpp  morton_unittest.cpp
se_denseslam/: CMakeLists.txt
se_denseslam/include/se/: DenseSLAMSystem.h  boundary_extraction.hpp  camera.hpp  commons.h  config.h  constant_parameters.h  planner_config.h  post_processing.hpp  preprocessing.h  preprocessing.hpp  rendering.h  rendering.hpp  tracking.h  tracking.hpp  volume_traits.hpp  vtk-io.h
se_denseslam/src/: DenseSLAMSystem.cpp  camera.cpp  preprocessing.cpp  rendering.cpp  tracking.cpp
se_denseslam/src/bfusion/: alloc_impl.hpp  bspline_lookup.cc  mapping_impl.hpp  rendering_impl.hpp
se_denseslam/src/kfusion/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
se_denseslam/src/multires/: alloc_impl.hpp  mapping_impl.hpp  rendering_impl.hpp
se_denseslam/src/multires_bfusion/: bspline_lookup2.cc  mapping_impl.hpp
se_denseslam/test/: CMakeLists.txt  Makefile
se_denseslam/test/camera/: CMakeLists.txt  PinholeCamera_unittest.cpp
se_denseslam/test/multires_bfusion/: CMakeLists.txt  bfusion_node_up_propagation_unittest.cpp
se_denseslam/test/multiscale_esdf_moving_sphere/: CMakeLists.txt  esdf_moving_sphere_unittest.cpp
se_denseslam/test/multiscale_fusion/: CMakeLists.txt  fusion_unittest.cpp
se_denseslam/test/multiscale_integration/: CMakeLists.txt  integration_unittest.cpp
se_denseslam/test/multiscale_tsdf_moving_camera/: CMakeLists.txt  tsdf_moving_camera_unittest.cpp
se_denseslam/test/post_processing/: CMakeLists.txt  post_processing_unittest.cpp
se_denseslam/test/test_data/: camera_hd.txt  camera_ros.txt
se_ompl/: CMakeLists.txt
se_ompl/include/se/: exploration.hpp  occupancy_world.hpp  path_planner_ompl.hpp  planning_parameter.hpp
se_ompl/src/: occupancy_world.cpp  volume_shifter.cpp
se_ompl/src/utils/: timing.cpp
se_ompl/test/: CMakeLists.txt  Makefile  tunnel.txt
se_ompl/test/collision/: CMakeLists.txt  collision_unittest.cpp
se_shared/: CMakeLists.txt  math_utils.h  str_utils.h  timings.h
se_shared/include/se/: perfstats.h  timings.h
se_shared/src/: StateSampling.cpp
se_shared/test/: CMakeLists.txt
se_shared/test/cmake/: FindEigen3.cmake  FindSophus.cmake
se_shared/test/path_planning/: CMakeLists.txt  candidateview_unittest.cpp  planninghistory_unittest.cpp
se_tools/: CMakeLists.txt  install_dependencies.sh  processPowerRpt  scene2raw.cpp
se_tools/scripts/: se_visualize_allocated_nodes.m  se_visualize_exploration.m
se_tools/scripts/octave_functions/: cube.m  plot_axes.m
supereight_ros/: CMakeLists.txt  package.xml
supereight_ros/data/: config.yaml
supereight_ros/include/supereight_ros/: CircularBuffer.hpp  map_visualizer.hpp  pipeline_support_functions.hpp  supereight_ros.hpp  supereight_ros_impl.hpp  visualization.hpp
supereight_ros/launch/: supereight_ros.launch
supereight_ros/msg/: ImagePose.msg
supereight_ros/src/: map_visualizer.cpp  pipeline_support_functions.cpp  supereight_ros.cpp  supereight_ros_node.cpp  visualization.cpp
supereight_ros/test/: main.cpp  test_example.cpp
tracking/: CMakeLists.txt
tracking/src/: tracker.cpp  tracking_kernels.hpp
tracking/src/cuda/: CMakeLists.txt  tracker_cuda.cu
tracking/src/openmp/: CMakeLists.txt  tracker_openmp.cpp  tracking_kernels.hpp
(+201 files in other folders)
